--- a/TodoApi/wwwroot/index.html
+++ b/TodoApi/wwwroot/index.html
@@ -53,7 +53,7 @@
     <table>
         <tr>
             <th>Is Complete</th>
-            <th>Name</th>
+            <th>Name1</th>
             <th></th>
             <th></th>
         </tr>
